mejorando seo de la pagina

--- a/index.html
+++ b/index.html
@@ -2,12 +2,59 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Carlos Abel Aguado Ramos - Desarrollador Full Stack con +4 años de experiencia en React, Angular, Node.js y más." />
+    <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)" />
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
+
+    <!-- SEO básico -->
+    <title>Carlos Abel Aguado | Desarrollador Full Stack · Portafolio</title>
+    <meta name="description" content="Portafolio de Carlos Abel Aguado Ramos. Desarrollador Full Stack con +3 años de experiencia en React, Angular, Node.js, NestJS y bases de datos. Lima, Perú." />
     <meta name="author" content="Carlos Abel Aguado Ramos" />
-    <meta name="keywords" content="Desarrollador Full Stack, React, Angular, Node.js, NestJS, TypeScript, Portafolio" />
-    <title>Carlos Abel Aguado | Desarrollador Full Stack</title>
+    <meta name="keywords" content="Desarrollador Full Stack, React, Angular, Node.js, NestJS, TypeScript, desarrollador web, portafolio, Lima Perú" />
+    <link rel="canonical" href="https://www.abelaguadodev.work/" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.abelaguadodev.work/" />
+    <meta property="og:title" content="Carlos Abel Aguado | Desarrollador Full Stack" />
+    <meta property="og:description" content="Portafolio de Carlos Abel Aguado Ramos. Desarrollador Full Stack con +3 años de experiencia en React, Angular, Node.js y bases de datos." />
+    <meta property="og:image" content="https://www.abelaguadodev.work/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="es_PE" />
+    <meta property="og:site_name" content="Carlos Abel Aguado - Portafolio" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Carlos Abel Aguado | Desarrollador Full Stack" />
+    <meta name="twitter:description" content="Portafolio de Carlos Abel Aguado Ramos. Desarrollador Full Stack con +3 años de experiencia en React, Angular, Node.js." />
+    <meta name="twitter:image" content="https://www.abelaguadodev.work/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
+    <!-- Datos estructurados (JSON-LD) para buscadores -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Carlos Abel Aguado Ramos",
+      "jobTitle": "Desarrollador Full Stack",
+      "url": "https://www.abelaguadodev.work/",
+      "email": "aguado170305@gmail.com",
+      "telephone": "+51 983446294",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Lima",
+        "addressCountry": "PE"
+      },
+      "sameAs": [
+        "https://github.com/Carlos-Abel-17"
+      ],
+      "description": "Desarrollador Full Stack con +3 años de experiencia en React, Angular, Node.js, NestJS y bases de datos."
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
